Scrollbar fix for print

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -9,7 +9,7 @@
   main {
     width: 100%;
     float: none;
-    overflow-x: show;
+    overflow-x: hide;
   }
   .wrapper {
     padding: 0;
